--- a/public/index.html
+++ b/public/index.html
@@ -7,27 +7,56 @@
     <!-- External CSS -->
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
 
+
+
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
-
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/tweet.css" type="text/css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
     <!-- App JS -->
-    <script type="text/javascript" src="/scripts/app.js"></script>
+   <script type="text/javascript" src="/scripts/app.js"></script>
+   <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+    <!-- FONTS -->
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,700,700i" rel="stylesheet">
+   <!--  AJAX -->
+   <script src="https://code.jquery.com/jquery-2.1.4.min.js">
+   </script>
+
   </head>
 
   <body>
 
     <!-- Top nav bar (fixed) -->
     <nav id="nav-bar">
-      <img class="logo" src="/images/bird.png" width="80px" height="80px">
+      <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
     </nav>
 
     <!-- Page-specific (main) content here -->
     <main class="container">
-    </main>
+      <!-- tweet box -->
+      <section class="new-tweet">
+        <div class="box1">
+          <h2>Compose a Tweet</h2>
+          <hr>
+          <form method= "POST" action= "/tweets" class = "add-tweet">
+            <textarea name="text" placeholder="What are you humming about?"></textarea>
 
+            <input type="submit" value="Tweet">
+            <span class="counter">140</span>
+
+          </form>
+          </div>
+      </section>
+      <section class= "tweet-container">
+      </section>
+    </main>
   </body>
 </html>
