--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
     <nav id="nav-bar">
       <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
+      <button>compose</button>
     </nav>
 
     <!-- Page-specific (main) content here -->
@@ -51,7 +52,8 @@
 
             <input type="submit" value="Tweet">
             <span class="counter">140</span>
-
+            <span class="error1"> tweet can only be 140 characters or less </span>
+            <span class="error2"> Please tweet </span>
           </form>
           </div>
       </section>
