--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,9 @@
     <nav id="nav-bar">
       <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
-      <button>compose</button>
+      <button>compose
+        <i class="fas fa-edit"></i>
+      </button>
     </nav>
 
     <!-- Page-specific (main) content here -->
