--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
     <!-- App JS -->
    <script type="text/javascript" src="/scripts/app.js"></script>
    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+   <script type="text/javascript" src="/scripts/helper-functions.js"></script>
+
     <!-- FONTS -->
 
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,700,700i" rel="stylesheet">
